# sigla-UFSCar

./: .gitignore  Dangerfile  Dockerfile  Gemfile  README.md  docker-compose.yml
.circleci/: config.yaml  config.yml
.github/: CODEOWNERS
app/assets/javascripts/: application.js  (+2 more)
app/controllers/: application_controller.rb  authorized_person_controller.rb  biometric_controller.rb  dashboard_controller.rb  laboratory_controller.rb  report_controller.rb  status_controller.rb
app/helpers/: authorized_person_helper.rb  biometric_helper.rb  laboratory_helper.rb
app/models/: authorized_person.rb  biometric.rb  biometric_access.rb  computer.rb  computer_status.rb  laboratory.rb  report.rb  status.rb  subject.rb  user.rb  users_advisor.rb
backend/config/: application.rb  routes.rb
backend/tools/: chip.rb  simpleCrawler.rb
config/: application.rb  database.yml  routes.rb  secrets.yml
config/environments/: development.rb  production.rb
config/initializers/: assets.rb  devise.rb
db/: development.sqlite3  schema.rb  seeds.rb  test.sqlite3
db/migrate/: 20160730232842_create_statuses.rb  20160730233343_add_initials_to_laboratory.rb  20161004233016_create_reports.rb  20161004233038_create_computers.rb  20161011130102_add_computer_references_to_report.rb  20161011175710_create_computer_statuses.rb  20161012015153_add_physical_id_to_computer.rb  20161014113219_add_column_status_to_computer.rb  20161015164146_change_column_in_subject.rb  20161111122653_add_column_to_user.rb  20161111142154_add_column_function_to_user.rb  20161115145715_add_column_function_to_laboratory.rb  20161117034652_add_column_user_id_to_report.rb  20161117044145_add_column_laboratory_id_to_report.rb  20161117055757_add_column_laboratory_initials_to_report.rb  20161120010927_add_column_resolution_to_report.rb  20161121124500_add_column_name_to_report.rb  20161122225523_create_authorized_people.rb  20161122230001_authorized_people.rb  20161123033831_create_biometrics.rb  20161209215103_create_biometric_accesses.rb  20170212022741_add_embedded_password_to_laboratories.rb  20170212022759_remove_linkdocs_in_laboratories.rb  20170315015256_add_embedded_update_to_laboratory.rb  20170410001427_add_type_to_users.rb  20170411014511_create_users_advisors.rb  20170422233932_add_status_to_authorized_person.rb  20170522194957_add_column_date_expiration_authorized_person.rb
lib/tasks/: check_biometric_validation.rake  scheduler.rake
public/: manifest.json
public/assets/: about.css  clock.js
test/controllers/: application_controller_test.rb  authorized_person_controller_test.rb  biometric_controller_test.rb  laboratory_controller_test.rb  report_controller_test.rb
test/fixtures/: authorized_people.yml  biometric_accesses.yml  biometrics.yml  computer_statuses.yml  computers.yml  reports.yml  statuses.yml  subjects.yml
test/models/: authorized_person_test.rb  biometric_access_test.rb  biometric_test.rb  computer_status_test.rb
tools/: chip.py  chip.rb  pc.py  pc.rb  seeds.rb  teste.rb  verify.c
tools/computers/: commands  computer.py  pc.py
tools/digital/: main.cpp
tools/digital_matcher/: CMakeCache.txt  CMakeLists.txt  Device.cpp  Device.h  Digital.cpp  Digital.h  Makefile  cache  cmake_install.cmake  digital  main.cpp  script.sh  teste.cpp  update_cache.py
tools/digital_saver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  digital  main.cpp
(+72 files in other folders)
